--- a/index.html
+++ b/index.html
@@ -55,23 +55,20 @@
     <p style="font-weight: 500; font-size: 2.2em">汇报 Cnury 最近的情况！</p>
     <p>
       感谢大家！Cnury 的 第一、二次 Beta 测试已经顺利完成！Cnury 将计划在 2022 年正式开始本体社区建设！
-      你可以在这里关注 Cnury 的最新进展、发布计划等！</br> 我们的
+      你可以在这里关注 Cnury 的最新进展、发布计划等！
+    </p>
+    <p>
+      我们的
       <a href="https://github.com/Cnury" target="_blank">GitHub</a>. 和 
       <a href="https://jq.qq.com/?_wv=1027&k=LBjgLPZx" target="_blank">QQ群组</a>. </br>
-      如果你有什么好的建议和想法，欢迎联系我们！也可以加入群组聊天讨论！
-      where I mostly tweet about Vue and frontend technologies.
+      如果你有什么好的建议和想法，欢迎联系我们！也可以加入群组讨论交流！
     </p>
     <p>
-      If you happen to speak Chinese, my Chinese name is 尤雨溪 (yóu yǔ xī). You
-      can also find me on
-      <a href="https://www.weibo.com/arttechdesign" target="_blank">微博</a> and
-      <a href="https://www.zhihu.com/people/evanyou/activities" target="_blank"
-        >知乎</a
-      >.
+      Thank you! Cnury's first and second beta tests have been successfully completed! 
+      Cnury plans to officially start the construction of ontology community in 2022!
     </p>
     <p>
-      Outside of programming and helping my wife take care of our two kids, I
-      enjoy video games, karaoke, sushi and collecting watches.
+      <span style="color:#CCCCCC; font-size:0.8em;">© 2021 Cnury. | 页面来自 EvanYou.me </span>
     </p>
   </body>
 </html>
