--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Cnury README</title>
+    <meta name=“keywords” content="Cnury,README,Cnury社区,Minecraft,MC社区">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.font.im/css?family=Rubik:300,500,700"
@@ -68,7 +69,7 @@
       Cnury plans to officially start the construction of ontology community in 2022!
     </p>
     <p>
-      <span style="color:#CCCCCC; font-size:0.8em;">© 2021 Cnury. | 页面来自 EvanYou.me </span>
+      <span style="color:#CCCCCC; font-size:0.8em;">© 2021 Cnury. / 页面来自 EvanYou.me </span>
     </p>
   </body>
 </html>
