--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1>README 近况预报</h1>
     <p style="font-weight: 500; font-size: 2.2em">汇报 Cnury 最近的情况！</p>
     <p>
-      感谢大家！Cnury 的 第一、二次 Beta 测试已经顺利完成！Cnury 将计划在 2022 年正式开始本体社区建设！
+      感谢大家！Cnury 的 第一、二次 Beta 测试已经顺利完成！Cnury 计划将在 2022 年正式开放本体社区！
       你可以在这里关注 Cnury 的最新进展、发布计划等！
     </p>
     <p>
